// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarFileTree component can bring up the Add File input 1`] = `
<div
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <Blueprint4.Tree
    contents={
      Array [
        Object {
          "childNodes": Array [
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 0,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                index.html
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 1,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={true}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                main.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 2,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                preload.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 3,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                renderer.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 4,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                styles.css
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "className": "add-file-input",
              "icon": "document",
              "id": "add",
              "label": <input
                autoFocus={true}
                className="bp4-input bp4-fill bp4-small"
                id="new-file-input"
                onBlur={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "padding": 0,
                    "width": "100%",
                  }
                }
              />,
            },
          ],
          "hasCaret": false,
          "icon": "folder-open",
          "id": "files",
          "isExpanded": true,
          "label": "Editors",
          "secondaryLabel": <Blueprint4.ButtonGroup
            minimal={true}
          >
            <Blueprint4.Tooltip2
              content="Add New File"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="add"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
            <Blueprint4.Tooltip2
              content="Reset Layout"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="grid-view"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
          </Blueprint4.ButtonGroup>,
        },
      ]
    }
  />
</div>
`;

exports[`SidebarFileTree component reflects the visibility state of all icons 1`] = `
<div
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <Blueprint4.Tree
    contents={
      Array [
        Object {
          "childNodes": Array [
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 0,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                index.html
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-off"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 1,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={true}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                main.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 2,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                preload.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 3,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                renderer.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 4,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                styles.css
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
          ],
          "hasCaret": false,
          "icon": "folder-open",
          "id": "files",
          "isExpanded": true,
          "label": "Editors",
          "secondaryLabel": <Blueprint4.ButtonGroup
            minimal={true}
          >
            <Blueprint4.Tooltip2
              content="Add New File"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="add"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
            <Blueprint4.Tooltip2
              content="Reset Layout"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="grid-view"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
          </Blueprint4.ButtonGroup>,
        },
      ]
    }
  />
</div>
`;

exports[`SidebarFileTree component renders 1`] = `
<div
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <Blueprint4.Tree
    contents={
      Array [
        Object {
          "childNodes": Array [
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 0,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                index.html
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 1,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={true}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                main.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 2,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                preload.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 3,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                renderer.js
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
            Object {
              "hasCaret": false,
              "icon": "document",
              "id": 4,
              "isSelected": false,
              "label": <Blueprint.ContextMenu2
                className="pointer"
                content={
                  <Blueprint4.Menu>
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="redo"
                      intent="primary"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Rename"
                    />
                    <Blueprint4.MenuItem2
                      active={false}
                      disabled={false}
                      icon="remove"
                      intent="danger"
                      multiline={false}
                      onClick={[Function]}
                      popoverProps={Object {}}
                      shouldDismissPopover={true}
                      text="Delete"
                    />
                  </Blueprint4.Menu>
                }
                onClick={[Function]}
              >
                styles.css
              </Blueprint.ContextMenu2>,
              "secondaryLabel": <Blueprint4.ButtonGroup>
                <Blueprint4.Tooltip2
                  content="Toggle Visibility"
                  hoverCloseDelay={0}
                  hoverOpenDelay={1000}
                  minimal={true}
                  placement="right"
                  transitionDuration={100}
                >
                  <Blueprint4.Button
                    minimal={true}
                    onClick={[Function]}
                  >
                    <Blueprint4.Icon
                      icon="eye-open"
                    />
                  </Blueprint4.Button>
                </Blueprint4.Tooltip2>
              </Blueprint4.ButtonGroup>,
            },
          ],
          "hasCaret": false,
          "icon": "folder-open",
          "id": "files",
          "isExpanded": true,
          "label": "Editors",
          "secondaryLabel": <Blueprint4.ButtonGroup
            minimal={true}
          >
            <Blueprint4.Tooltip2
              content="Add New File"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="add"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
            <Blueprint4.Tooltip2
              content="Reset Layout"
              hoverCloseDelay={0}
              hoverOpenDelay={1000}
              minimal={true}
              placement="right"
              transitionDuration={100}
            >
              <Blueprint4.Button
                icon="grid-view"
                onClick={[Function]}
                small={true}
              />
            </Blueprint4.Tooltip2>
          </Blueprint4.ButtonGroup>,
        },
      ]
    }
  />
</div>
`;
